# Rusqdrive

./: CHANGELOG.md  CODES.md  Cargo.toml  LICENSE.Apache-2.0  Makefile  README.md  TODO.md  db.sqlite3  deny.toml  rust-toolchain  rustfmt.toml
rusqdrive/: Cargo.toml
rusqdrive/examples/usercrud/: main.rs
rusqdrive/examples/usercrud/models/: constants.rs  user.rs
rusqdrive/src/: database.rs  lib.rs  prelude.rs
rusqdrive_derive/: Cargo.toml
rusqdrive_derive/src/: create_table.rs  field_struct.rs  lib.rs  utils.rs
