[package]
name = "rusqdrive_derive"
version = "1.2.0"
authors = ["jadsn1894@gmail.com"]
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.8"
syn = { version = "1.0.55", features = ["extra-traits", "derive", "full", "parsing"] }
proc-macro2 = "1.0.26"

[dependencies.rusqlite]
version = "0.25.0"
features = ["bundled-full"]
